--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,17 @@ Package: PCPS
 Type: Package
 Title: Principal Coordinates of Phylogenetic Structure
 Version: 1.0.3
-Date: March 28, 2016
+Date: 2016-04-04
 Author: Vanderlei Julio Debastiani
-Maintainer: Vanderlei Julio Debastiani
-        <vanderleidebastiani@yahoo.com.br>
-Depends: SYNCSA
-Imports: ape, picante, phylobase, vegan
-Description: Set of functions for analysis of Principal Coordinates of Phylogenetic Structure (PCPS).
-License: GPL-2 
+Maintainer: Vanderlei Julio Debastiani <vanderleidebastiani@yahoo.com.br>
+Depends:
+    SYNCSA
+Imports:
+    ape,
+    picante,
+    phylobase,
+    vegan
+Description: Set of functions for analysis of Principal Coordinates of
+    Phylogenetic Structure (PCPS).
+License: GPL-2
+RoxygenNote: 5.0.1
