--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,21 @@ S3method(plot,pcpscurve)
 S3method(print,pcoasig)
 S3method(print,pcps)
 S3method(print,pcpscurve)
-S3method(scores,pcoasig)
-S3method(scores,pcps)
+S3method(print,summarypcoasig)
+S3method(print,summarypcps)
 S3method(summary,pcoasig)
 S3method(summary,pcps)
 S3method(summary,pcpscurve)
 export(define.clade)
 export(matrix.p.sig)
 export(pcoa.sig)
+export(pcpc.curve.calc)
 export(pcps)
 export(pcps.curve)
 export(pcps.sig)
 export(self.belonging)
 import(SYNCSA)
+importFrom(RcppArmadillo,fastLm)
 importFrom(ape,makeNodeLabel)
 importFrom(ape,node.depth.edgelength)
 importFrom(ape,pcoa)
@@ -26,16 +28,19 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,text)
+importFrom(parallel,clusterApply)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parRapply)
+importFrom(parallel,stopCluster)
 importFrom(phylobase,descendants)
 importFrom(phylobase,phylo4)
 importFrom(picante,randomizeMatrix)
-importFrom(picante,taxaShuffle)
 importFrom(stats,as.formula)
 importFrom(stats,cor)
 importFrom(stats,fitted)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
-importFrom(stats,lm)
 importFrom(stats,quantile)
 importFrom(stats,summary.lm)
 importFrom(vegan,adonis)
@@ -44,6 +49,5 @@ importFrom(vegan,ordilabel)
 importFrom(vegan,ordispider)
 importFrom(vegan,procrustes)
 importFrom(vegan,rda)
-importFrom(vegan,scores)
 importFrom(vegan,vegdist)
 importFrom(vegan,wcmdscale)
