--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: PCPS
 Type: Package
 Title: Principal Coordinates of Phylogenetic Structure
 Version: 1.0.4
-Date: 2017-31-01
+Date: 2017-02-06
 Author: Vanderlei Julio Debastiani
 Maintainer: Vanderlei Julio Debastiani <vanderleidebastiani@yahoo.com.br>
 Depends:
@@ -12,7 +12,10 @@ Imports:
     picante,
     phylobase,
     vegan,
-    RcppArmadillo
+    RcppArmadillo,
+    stats,
+    graphics,
+    parallel
 Description: Set of functions for analysis of Principal Coordinates of
     Phylogenetic Structure (PCPS).
 License: GPL-2
