--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(pcps)
 export(pcps.curve)
 export(pcps.sig)
 export(self.belonging)
+export(wcmdscale.org)
 import(SYNCSA)
 importFrom(RcppArmadillo,fastLm)
 importFrom(ape,makeNodeLabel)
