--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,24 @@ S3method(plot,pcpscurve)
 S3method(print,pcoasig)
 S3method(print,pcps)
 S3method(print,pcpscurve)
+S3method(print,pcpssig)
 S3method(print,summarypcoasig)
 S3method(print,summarypcps)
 S3method(summary,pcoasig)
 S3method(summary,pcps)
 S3method(summary,pcpscurve)
+export(FUN.ADONIS)
+export(FUN.ADONIS2.global)
+export(FUN.ADONIS2.margin)
+export(FUN.GLM)
+export(FUN.GLS.marginal)
+export(FUN.GLS.sequential)
+export(FUN.LME.marginal)
+export(FUN.LME.sequential)
+export(FUN.MANTEL)
+export(FUN.RDA)
 export(define.clade)
+export(matrix.p.null)
 export(matrix.p.sig)
 export(pcoa.sig)
 export(pcpc.curve.calc)
@@ -30,22 +42,24 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,text)
+importFrom(nlme,gls)
+importFrom(nlme,lme)
 importFrom(parallel,clusterApply)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
-importFrom(parallel,parRapply)
+importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(phylobase,descendants)
 importFrom(phylobase,phylo4)
 importFrom(picante,randomizeMatrix)
-importFrom(stats,as.formula)
+importFrom(stats,anova)
 importFrom(stats,cor)
 importFrom(stats,fitted)
-importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,quantile)
 importFrom(stats,summary.lm)
 importFrom(vegan,adonis)
+importFrom(vegan,adonis2)
 importFrom(vegan,mantel)
 importFrom(vegan,ordilabel)
 importFrom(vegan,ordispider)
