--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,12 +24,14 @@ export(FUN.RDA)
 export(define.clade)
 export(matrix.p.null)
 export(matrix.p.sig)
+export(mutate.names.matrix.p.null)
 export(pcoa.sig)
 export(pcpc.curve.calc)
 export(pcps)
 export(pcps.curve)
 export(pcps.sig)
 export(scores.pcps)
+export(select.pcpsmethod)
 export(self.belonging)
 export(wcmdscale.org)
 import(SYNCSA)
