--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(FUN.LME.marginal)
 export(FUN.LME.sequential)
 export(FUN.MANTEL)
 export(FUN.RDA)
+export(check.formula)
 export(define.clade)
 export(matrix.p.null)
 export(matrix.p.sig)
