--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(define.clade)
 export(matrix.p.null)
 export(matrix.p.sig)
 export(mutate.names.matrix.p.null)
+export(organize.pcps)
 export(pcoa.sig)
 export(pcpc.curve.calc)
 export(pcps)
