--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: PCPS
 Type: Package
 Title: Principal Coordinates of Phylogenetic Structure
 Version: 1.0.7
-Date: 2019-04-22
+Date: 2020-01-07
 Author: Vanderlei Julio Debastiani
 Maintainer: Vanderlei Julio Debastiani <vanderleidebastiani@yahoo.com.br>
 Depends:
-    SYNCSA (>= 1.3.3)
+    SYNCSA (>= 1.3.4)
 Imports:
     ape,
     picante,
@@ -20,7 +20,7 @@ Imports:
 Description: Set of functions for analysis of Principal Coordinates of Phylogenetic Structure (PCPS).
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 Collate: 
     'matrix.p.sig.R'
     'pcps.sig.R'
@@ -38,6 +38,7 @@ Collate:
     'define.clade.R'
     'matrix.p.null.R'
     'mutate.names.matrix.p.null.R'
+    'organize.pcps.R'
     'pcoa.sig.R'
     'pcps.curve.R'
     'pcpc.curve.calc.R'
