--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: PCPS
 Type: Package
 Title: Principal Coordinates of Phylogenetic Structure
-Version: 1.0.7
-Date: 2020-01-15
+Version: 1.0.8
+Date: 2020-02-03
 Author: Vanderlei Julio Debastiani
 Maintainer: Vanderlei Julio Debastiani <vanderleidebastiani@yahoo.com.br>
 Depends:
@@ -20,12 +20,14 @@ Imports:
 Description: Set of functions for analysis of Principal Coordinates of Phylogenetic Structure (PCPS).
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Collate: 
     'matrix.p.sig.R'
     'pcps.R'
     'pcps.sig.R'
     'FUN.ADONIS.R'
+    'FUN.ADONIS2.global.R'
+    'FUN.ADONIS2.margin.R'
     'FUN.GLM.R'
     'FUN.GLS.marginal.R'
     'FUN.GLS.sequential.R'
