--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(summary,pcoasig)
 S3method(summary,pcps)
 S3method(summary,pcpscurve)
 export(FUN.ADONIS)
+export(FUN.ADONIS2.global)
+export(FUN.ADONIS2.margin)
 export(FUN.GLM)
 export(FUN.GLS.marginal)
 export(FUN.GLS.sequential)
